--- a/WebRoot/messages/ZabMsg_pt.properties
+++ b/WebRoot/messages/ZabMsg_pt.properties
@@ -1,7 +1,7 @@
 # 
 # ***** BEGIN LICENSE BLOCK *****
 # Zimbra Collaboration Suite Web Client
-# Copyright (C) 2012, 2013, 2014, 2016 Synacor, Inc.
+# Copyright (C) 2011, 2012, 2013, 2014, 2015, 2016 Synacor, Inc.
 #
 # This program is free software: you can redistribute it and/or modify it under
 # the terms of the GNU General Public License as published by the Free Software Foundation,
@@ -12,64 +12,91 @@
 # See the GNU General Public License for more details.
 # You should have received a copy of the GNU General Public License along with this program.
 # If not, see <https://www.gnu.org/licenses/>.
-# ****** END LICENSE BLOCK ******
+# ***** END LICENSE BLOCK *****
 # 
 favIconUrl=/img/logo/favicon.ico
-LBL_zimbraPrefAdminConsoleWarnOnExit =Exibir um aviso quando os administradores tentarem navegar para fora da Consola de Administra\u00e7\u00e3o Zimbra
-ERROR_ZCS_NOT_RUNNING = N\u00e3o \u00e9 poss\u00edvel ligar ao servidor Zimbra. Certifique-se de que o Zimbra est\u00e1 a ser executado.
-zimbraAdminTitle = Administra\u00e7\u00e3o Zimbra
+LBL_zimbraPrefAdminConsoleWarnOnExit =Apresentar um aviso quando os administradores tentarem navegar para fora da Consola de administra\u00e7\u00e3o do Zimbra
+ERROR_ZCS_NOT_RUNNING = N\u00e3o \u00e9 poss\u00edvel estabelecer uma liga\u00e7\u00e3o ao servidor do Zimbra. Certifique-se de que o Zimbra est\u00e1 a ser executado.
+zimbraAdminTitle = Administra\u00e7\u00e3o do Zimbra
 HELP_PAGE_0 = Centro de ajuda do administrador do Zimbra
 HELP_PAGE_1 = \
-	Abaixo encontram-se as hiperliga\u00e7\u00f5es para a\
-	documenta\u00e7\u00e3o e f\u00f3runs do Zimbra, para o ajudar a encontrar respostas para as suas perguntas sobre a utiliza\u00e7\u00e3o \
-	do Servidor de Colabora\u00e7\u00e3o Zimbra.
-	
-HELP_PAGE_2 = Ajuda online Zimbra
-HELP_PAGE_3 = Para saber mais sobre como usar a consola de administra\u00e7\u00e3o, clique na hiperliga\u00e7\u00e3o de Ajuda online Zimbra.
-HELP_PAGE_6 = F\u00f3runs Zimbra
+	Poder\u00e1 encontrar abaixo liga\u00e7\u00f5es para a documenta\u00e7\u00e3o \
+ e os f\u00f3runs do Zimbra, de forma a encontrar respostas em rela\u00e7\u00e3o \u00e0s suas d\u00favidas sobre como utilizar \
+ o Servidor de colabora\u00e7\u00e3o do Zimbra.
+
+# DEPRECATED
+# see ZaMsg.subtitle_help_center_1
+HELP_PAGE_2 = Ajuda online do Zimbra
+
+HELP_PAGE_3 = Para aprender a utilizar a consola de administra\u00e7\u00e3o, clique na liga\u00e7\u00e3o da Ajuda online do Zimbra.
+HELP_PAGE_6 = F\u00f3runs do Zimbra
 HELP_PAGE_7 = \
-	Obtenha respostas para as suas perguntas no f\u00f3rum Zimbra. Pode procurar \n respostas nas publica\u00e7\u00f5es e pode publicar uma d\u00favida.
-HELP_PAGE_8 = Guia de administra\u00e7\u00e3o Zimbra
-HELP_PAGE_9 = O Guia de administra\u00e7\u00e3o descreve a arquitectura do sistema Zimbra, os componentes Zimbra, \
-	as fun\u00e7\u00f5es de administra\u00e7\u00e3o e os comandos CLI.
-HELP_PAGE_13 = O Zimbra wiki inclui artigos que a equipa de suporte e a \
-comunidade escreveram em resposta ao diagn\u00f3stico de erros e a \
-problemas de administra\u00e7\u00e3o que n\u00e3o foram abordados na documenta\u00e7\u00e3o.
-HELP_OTHER_GUIDES_CONNNECTOR_INFO = Usar o Zimbra com outros clientes? Consulte estes guias.
-zimbraTitle = Consola de administra\u00e7\u00e3o Zimbra
-about_title = Zimbra&trade; Consola de administra\u00e7\u00e3o
-HELP_WIKI_LINK = https://wiki.zimbra.com
-LBL_HomeZimbraVersion = Vers\u00e3o Zimbra:
-LBL_HomeHelpCenter = Centro de ajuda Zimbra
+	Obtenha respostas em rela\u00e7\u00e3o \u00e0s suas d\u00favidas no f\u00f3rum do Zimbra. Pode pesquisar \
+ respostas nas publica\u00e7\u00f5es e publicar uma d\u00favida.
+HELP_PAGE_8 = Manual de administra\u00e7\u00e3o do Zimbra
+HELP_PAGE_9 = O Manual de administra\u00e7\u00e3o descreve a arquitetura de sistema do Zimbra, os componentes do mesmo, \
+ as fun\u00e7\u00f5es de administra\u00e7\u00e3o e os comandos de CLI.
+HELP_PAGE_13 = A "wiki" do Zimbra inclui artigos que a equipa de assist\u00eancia e a \
+comunidade escreveram em resposta \u00e0 resolu\u00e7\u00e3o de problemas e a quest\u00f5es \
+de administra\u00e7\u00e3o que n\u00e3o tinham sido abordadas na documenta\u00e7\u00e3o.
+HELP_OTHER_GUIDES_CONNNECTOR_INFO = Utilizar o Zimbra com outros programas-cliente? Consulte estes manuais.
+zimbraTitle = Consola de administra\u00e7\u00e3o do Zimbra
+about_title = Consola de administra\u00e7\u00e3o do Zimbra&trade;
+HELP_WIKI_LINK = http://wiki.zimbra.com
+LBL_HomeZimbraVersion = Vers\u00e3o do Zimbra:
+LBL_HomeHelpCenter = Centro de ajuda do Zimbra
 LBL_HomeMsgCount = Contagem de mensagens:
 LBL_HomeMsgVolume = Volume de mensagens:
 attrDesc_mailHost = Servidor:
 About_Button_Label = Sobre a vers\u00e3o do Zimbra
-zimbraHomePage = P\u00e1gina inicial Zimbra
-zimbraAbout = Acerca do Zimbra...
+zimbraHomePage = P\u00e1gina inicial do Zimbra
+zimbraAbout = Sobre o Zimbra...
 
-clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a> :: a l\u00edder em troca de mensagens instant\u00e2neas e colabora\u00e7\u00e3o usando c\u00f3digo aberto :: \
-    <a target="_new" href="https://blog.zimbra.com">Blog</a> - \
-    <a target="_new" href="https://wiki.zimbra.com">Wiki</a> - \
-    <a target="_new" href="https://www.zimbra.com/forums">F\u00f3runs</a>
-ZWC_END_USER_GUIDE = Guia do utilizador final do ZWC para 8.0
-ZWC_END_USER_GUIDE_INFO = O guia do utilizador final descreve as funcionalidades e aplica\u00e7\u00f5es usadas no Cliente Web Zimbra.
+# Copyrights must be in English, so these two keys are omitted from localized versions in order to fall back to the ones here.
+
+# Used for About Screen copyright section
+# Takes in the current year as a parameter for copyright end year value
+aboutScreenCopyright = Zimbra {0} (compila\u00e7\u00e3o {1})<br><br> Copyright \u00a9 2005-{2} Synacor, Inc. \
+  Todos os direitos reservados. Este produto encontra-se protegido pelas leis de direitos de autor e propriedade intelectual dos E.U.A. e internacionais. \
+  "Zimbra" \u00e9 uma marca comercial registada da Synacor, Inc. nos Estados Unidos e noutras jurisdi\u00e7\u00f5es. \
+  Todas as outras marcas e nomes mencionados na presente documenta\u00e7\u00e3o poder\u00e3o ser marcas comerciais detidas pelas respetivas empresas.\
+  <br><br> Synacor, Inc. \
+  <a href="http://www.synacor.com" target="_blank">www.synacor.com</a>
+# Used for Login/Splash Screen copyright section
+# Takes in the current year as a parameter for copyright end year value
+splashScreenCopyright = Copyright \u00a9 2005-{0} Synacor, Inc. Todos os direitos reservados. "Zimbra" \u00e9 uma marca comercial registada da Synacor, Inc.
+
+clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: o l\u00edder em ferramentas de mensagens e colabora\u00e7\u00e3o de c\u00f3digo aberto :: \
+    <a target="_new" href="http://blog.zimbra.com">Blogue</a> - \
+    <a target="_new" href="http://wiki.zimbra.com">"Wiki"</a> - \
+    <a target="_new" href="http://www.zimbra.com/forums">F\u00f3runs</a>
+ZWC_END_USER_GUIDE = Manual do utilizador final do ZWC para a vers\u00e3o 8.0
+ZWC_END_USER_GUIDE_INFO = O manual do utilizador final descreve as funcionalidades e aplica\u00e7\u00f5es utilizadas no Programa-Cliente da Web do Zimbra.
 MessageContent = mensagem
 OVP_dlSearchResult = Listas de distribui\u00e7\u00e3o
 
+# ==================================================================================
+# ==================================================================================
+# ==================================================================================
+#
+# DEPRECATED
+# see ZaMsg.title_help_center
 HELP_CENTER_TITLE = Centro de ajuda do administrador do Zimbra
-onlineHelpDetail = Para saber como usar a consola de administra\u00e7\u00e3o, clique na hiperliga\u00e7\u00e3o de Ajuda online Zimbra. Para obter mais detalhes sobre \
-\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0 novas funcionalidades e problemas que tenham sido resolvidos nesta vers\u00e3o, leia a p\u00e1gina <a target="_new" href="{0}">\
-\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0\u00a0 Documenta\u00e7\u00e3o do servidor de colabora\u00e7\u00e3o Zimbra</a> e as Notas de Vers\u00e3o.
+
+# DEPRECATED
+# see ZaMsg.desc_help_center_1
+onlineHelpDetail = Para aprender a utilizar a consola de administra\u00e7\u00e3o, clique na liga\u00e7\u00e3o da Ajuda online do Zimbra. Para obter informa\u00e7\u00f5es detalhadas sobre \
+ as novas funcionalidades e os problemas que foram resolvidos nesta vers\u00e3o, aceda \u00e0 p\u00e1gina <a target="_new" href="{0}">\
+Documenta\u00e7\u00e3o do Servidor de colabora\u00e7\u00e3o do Zimbra</a> e leia as notas de lan\u00e7amento.
 HELP_topMigrationQuestions = Principais perguntas sobre migra\u00e7\u00e3o
-HELP_adminGuide = Guia de administradores
-HELP_adminGuideDetail = O Guia de administra\u00e7\u00e3o descreve a arquitectura do sistema Zimbra, os componentes Zimbra, as fun\u00e7\u00f5es de administra\u00e7\u00e3o e os comandos CLI.
-HELP_usersGuide = Guia de Utilizadores Finais
-HELP_usersGuideDetail = O guia do utilizador final descreve as funcionalidades e aplica\u00e7\u00f5es usadas no Cliente Web Zimbra.
+HELP_adminGuide = Manual dos administradores
+HELP_adminGuideDetail = O Manual de administra\u00e7\u00e3o descreve a arquitetura de sistema do Zimbra, os componentes do mesmo, as fun\u00e7\u00f5es de administra\u00e7\u00e3o e os comandos de CLI.
+HELP_usersGuide = Manual dos utilizadores finais
+HELP_usersGuideDetail = O manual do utilizador final descreve as funcionalidades e aplica\u00e7\u00f5es utilizadas no Programa-Cliente da Web do Zimbra.
 HELP_askCommunity = Perguntar \u00e0 comunidade
-HELP_askCommunityItem1 = <a target="_new" href="https://www.zimbra.com/forums">F\u00f3runs Zimbra</a> \u00e9 um \u00f3ptimo local para obter respostas \u00e0s suas perguntas. Pode pesquisar respostas a partir das publica\u00e7\u00f5es, e pode publicar uma pergunta.
-HELP_askCommunityItem2 = <a target="_new" href="https://wiki.zimbra.com">O Zimbra Wiki</a> inclui artigos que a equipa de suporte e a comunidade escreveram em resposta ao diagn\u00f3stico de erros e a problemas de administra\u00e7\u00e3o que n\u00e3o foram abordados na documenta\u00e7\u00e3o.
-HELP_MIG_Q1 = Como posso migrar contas de e-mail de servidor do Exchange para o Zimbra?
-HELP_MIG_Q2 = Como podem os meus utilizadores importar o conte\u00fado de um ficheiro .pst a partir de uma caixa de correio do Microsoft Outlook 2003, 2007, 2010 para o Zimbra?
-HELP_MIG_Q3 = Como posso migrar contas de e-mail de servidor do Domino para o Zimbra?
-HELP_MIG_Q4 = Como posso migrar dados de calend\u00e1rio usando a ferramenta de migra\u00e7\u00e3o iCalendar?
+HELP_askCommunityItem1 = Os <a target="_new" href="http://www.zimbra.com/forums">F\u00f3runs do Zimbra</a> s\u00e3o um excelente local para obter respostas em rela\u00e7\u00e3o \u00e0s suas d\u00favidas. Pode pesquisar respostas nas publica\u00e7\u00f5es e publicar uma d\u00favida.
+HELP_askCommunityItem2 = A <a target="_new" href="http://wiki.zimbra.com">"Wiki" do Zimbra</a> inclui artigos que a equipa de assist\u00eancia e a comunidade escreveram em resposta \u00e0 resolu\u00e7\u00e3o de problemas e a quest\u00f5es de administra\u00e7\u00e3o que n\u00e3o tinham sido abordadas na documenta\u00e7\u00e3o
+HELP_MIG_Q1 = Como posso migrar contas de email de servidor do Exchange para o Zimbra?
+HELP_MIG_Q2 = Como podem os meus utilizadores importar o conte\u00fado de um ficheiro .pst a partir de uma caixa de correio do Microsoft Outlook 2003, 2007 ou 2010 para o Zimbra?
+HELP_MIG_Q3 = Como posso migrar contas de email de servidor do Domino para o Zimbra?
+HELP_MIG_Q4 = Como posso migrar dados de calend\u00e1rio utilizando a Ferramenta de migra\u00e7\u00e3o do iCalendar?
